# FedTM

./: README.md  client.py  pyproject.toml  server.py  utils.py
tests/: test_neural_net_fl.py
