[tool.poetry]
name = "neural-net-fl"
version = "0.1.0"
description = ""
authors = ["Iago Carvalho Cavalcante <carvalhoiago@live.com>"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.11"
flwr = "^0.17.0"
pandas = "^1.3.5"
tensorflow = "^2.7.0"
imblearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
